--- a/kmom05/dom/style/kmom05.css
+++ b/kmom05/dom/style/kmom05.css
@@ -1,8 +1,22 @@
-html,
-body {
-    position: relative;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+.box {
+    position: absolute;
+}
+
+.center {
+    top: 50%;
+    left: 50%;
+}
+
+.green {
+    background-color: green;
+}
+
+.size100 {
+    height: 100px;
+    width: 100px;
+}
+
+.size200 {
+    height: 200px;
+    width: 200px;
 }
