More finished tasks, just few remaining

--- a/kmom05/dom/style/kmom05.css
+++ b/kmom05/dom/style/kmom05.css
@@ -1,5 +1,6 @@
 .box {
     position: absolute;
+    z-index: 1;
 }
 
 .center {
@@ -22,9 +23,13 @@
 }
 
 .selected {
-    border: 4px solid blue;
+    border: 4px solid black;
 }
 
 .circle {
     border-radius: 50%;
+}
+
+.animateSize {
+    transition: width 1s, height 1s;
 }
