--- a/kmom06/hangman/style/main-style.css
+++ b/kmom06/hangman/style/main-style.css
@@ -1,42 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Sanchez&display=swap');
 
-h1 {
-    text-align: center;
-}
-
-h3 {
-    color: black;
-}
-
-.content {
-    border: 1px solid black;
-    background-color: #eee;
-    padding: 20px;
-    margin: 0 auto;
-    width: 1000px;
-    border-radius: 15px;
-}
-
 html {
-    background-image: url("../img/pexels-szabó-viktor-3228418.jpg");
+    background-image: url("../img/pexels-szab%c3%b3-viktor-3228418.jpg");
     background-attachment: fixed;
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
     overflow-y: scroll;
     font-family: 'Sanchez', serif;
-}
-
-a {
-    color: papayawhip;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-a:visited {
-    color: antiquewhite;
 }
 
 html::after {
@@ -51,10 +22,11 @@ html::after {
     opacity: 0.2;
 }
 
+
 body {
     margin: 8px auto;
     padding: 8px;
-    width: 1150px;
+    width: auto;
     border-radius: 10px;
 
     /** background-color: #eee; **/
@@ -67,242 +39,94 @@ main {
     border-radius: 10px;
 }
 
-article {
-    padding: 10px;
+aside {
+    float: left;
+    width: 20%;
 }
 
-article > header {
+.any-letter {
+    padding: 5px;
+    margin: 5px;
+    line-height: inherit;
     text-align: center;
+    font-weight: bold;
 }
 
-/**
- * responsive
- */
-@media (max-width: 980px) {
-    body,
-    main,
-    article,
-    section {
-        width: auto;
-    }
-
-    article .kmom,
-    article .kmom-left,
-    article .kmom-right {
-        width: inherit;
-        float: left;
-    }
+#alphabet {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        font-size: 1.4em;
 }
 
-.all-browsers {
-    margin-bottom: 5px;
-    margin-top: 5px;
-    padding: 0.6em;
-    border: 1px solid #999;
-    border-radius: 10px;
-    color: #eee;
-    overflow: auto;
+.letter {
+    border: 1px solid #000;
+    border-radius: 3px;
+    background-color: #eeee;
+    max-width: 2em;
+
 }
 
-.kmom {
-    margin-bottom: 5px;
-    margin-top: 5px;
-    width: 98%;
-    padding: 10px;
-    background-color: rgba(244, 242, 247, 0.7);
-    opacity: 1;
-    border: 1px solid #999;
-    border-radius: 10px;
-    color: black;
-    overflow: auto;
-    clear: both;
+.letter:hover {
+    cursor: pointer;
 }
 
-.kmom-left {
-    float: left;
-    margin-bottom: 5px;
-    margin-top: 5px;
-    width: 47.5%;
-    padding: 0.5em;
-    background-color: rgba(244, 242, 247, 0.7);
-    opacity: 1;
-    border: 1px solid #999;
-    border-radius: 10px;
-    color: black;
-    overflow: auto;
+.letter.disabled {
+    border: none;
+    border-radius: 3px;
+    background-color: #eeee;
+    color: #555;
 }
 
-.kmom-right {
-    float: right;
-    margin-bottom: 5px;
-    margin-top: 5px;
-    width: 47.5%;
-    padding: 0.5em;
-    background-color: rgba(244, 242, 247, 0.7);
-    opacity: 1;
-    border: 1px solid #999;
-    border-radius: 10px;
-    color: black;
-    overflow: auto;
+.letter.disabled:hover {
+    cursor: default;
 }
 
-.me-left {
-    width: 250px;
-    margin-right: 20px;
-    float: left;
-    border-radius: 10px;
+#secret-word {
+    display: flex;
+    max-width: 80%;
+    justify-content: center;
 }
 
-.me-right {
-    width: 250px;
-    margin-left: 20px;
-    float: right;
-    border-radius: 10px;
+.secret-letter {
+    font-size: 2em;
+    background-color: #2bba;
 }
 
-.navbar {
-    margin-top: 5px;
-    padding: 0.5em;
-    border-radius: 10px;
-    border: 1px solid #999;
+#message {
+    display: flex;
+    max-width: 80%;
+    justify-content: center;
+    font-size: 5em;
+    color: red;
+    background-color: #2bba;
 }
 
-.navbar .selected {
-    background-color: rgba(255, 255, 255, 0.6);
-    opacity: 1;
-}
-
-.navbar a {
+.container {
     display: inline-block;
-    padding: 0.4em 0.8em;
+    max-width: 60%;
+    border: 1px solid black;
+    background-color: #eeea;
+    padding: 20px;
+    margin: 0 auto;
+    border-radius: 15px;
+}
+
+h1 {
     text-align: center;
-    font-size: 16px;
-    border: 1px solid #999;
-    border-radius: 5px;
-    color: #000;
-    text-decoration: none;
 }
 
-.navbar a:hover {
-    text-decoration: underline;
-    background-color: rgba(255, 255, 255, 0.8);
-    opacity: 1;
-}
-
-.site-header {
-    overflow: auto; /* clear fix to make div span all elements */
-    background: transparent;
+h3 {
     color: black;
 }
 
-#site-footer {
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0.3);
-    opacity: 1;
+a {
+    color: papayawhip;
 }
 
-#site-footer a {
-    color: olive;
-}
-
-#site-footer a:hover {
+a:hover {
     text-decoration: none;
 }
 
-#site-footer a:visited {
-    color: dimgrey;
-}
-
-.site-header > img {
-    float: left;
-    border-radius: 50%;
-}
-
-.site-title {
-    display: block;
-    padding-top: 1em;
-    padding-left: 50px;
-    font-size: 32px;
-    overflow: auto;
-}
-
-.site-slogan {
-    display: block;
-    padding-left: 50px;
-    font-style: italic;
-    overflow: auto;
-}
-
-
-.byline {
-    display: block;
-    margin-top: 5px;
-    padding: 0.5em;
-    color: black;
-    border: 1px solid #999;
-    border-radius: 10px;
-    background-color: rgba(244, 242, 247, 0.6);
-    opacity: 1;
-    clear: both;
-}
-
-.byline img {
-    float: left;
-    padding: 0.1em;
-    width: 60px;
-    border-radius: 7px;
-}
-
-.byline a {
-    color: darkslategrey;
-    text-decoration: underline;
-}
-
-.byline a:hover {
-    text-decoration: none;
-}
-
-.byline a:visited {
-    text-decoration: underline;
-}
-
-.contact {
-    width: 70%;
-    padding: 12px;
-    background-color: rgb(244, 242, 247);
-    background-color: rgba(244, 242, 247, 0.5);
-    opacity: 1;
-    border-radius: 10px;
-}
-
-legend {
-    font-size: 24px;
-    border-radius: 10px;
-}
-
-input[type=text] {
-    width: 100%;
-    margin: 8px 0;
-    box-sizing: border-box;
-    padding: 12px 20px;
-}
-
-input[type=submit] {
-    width: 200px;
-    font-size: 16px;
-    padding: 10px 0;
-}
-
-select {
-    width: 50%;
-    margin: 8px 0;
-    padding: 3px 4px;
-    display: block;
-}
-
-textarea {
-    display: block;
-    margin: 12px 0;
-    width: 80%;
-    height: 75px;
+a:visited {
+    color: antiquewhite;
 }
