--- a/kmom06/hangman/style/main-style.css
+++ b/kmom06/hangman/style/main-style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Sanchez&display=swap');
 
 html {
-    background-image: url("../img/pexels-szab%c3%b3-viktor-3228418.jpg");
+    background-image: url("../img/pexels-szabb.jpg");
     background-attachment: fixed;
     background-position: top;
     background-repeat: no-repeat;
@@ -37,6 +37,12 @@ main {
     background-color: rgba(0, 0, 0, 0.3);
     opacity: 1;
     border-radius: 10px;
+}
+
+.content {
+    position: relative;
+    left: 10%;
+    right: 10%;
 }
 
 aside {
@@ -83,7 +89,6 @@ aside {
 
 #secret-word {
     display: flex;
-    max-width: 80%;
     justify-content: center;
 }
 
@@ -103,6 +108,9 @@ aside {
 
 .container {
     display: inline-block;
+    position: relative;
+    left: 5%;
+    right: 20%;
     max-width: 60%;
     border: 1px solid black;
     background-color: #eeea;
