--- a/kmom04/flag3/style/old.flags.css
+++ b/kmom04/flag3/style/old.flags.css
@@ -1,7 +1,7 @@
 .flag-300x200 {
     position: relative;
-    width: 100px;
-    height: 66.7px;
+    width: 300px;
+    height: 200px;
     margin: 5px;
 }
 
@@ -15,10 +15,10 @@
 /* Backside */
 .backside {
     position: absolute;
-    top: 30%;
-    left: 36.67%;
-    height: 40%;
-    width: 26.67%;
+    top: 60px;
+    left: 110px;
+    height: 80px;
+    width: 80px;
     border-radius: 50%;
     background-color: red;
     z-index: 2;
@@ -58,20 +58,20 @@
 
 .laos-stripe {
     position: absolute;
-    top: 25%;
+    top: 50px;
     left: 0;
-    height: 50%;
-    width: 100%;
+    height: 100px;
+    width: 300px;
     background-color: #002868;
     z-index: 1;
 }
 
 .laos-circle {
     position: absolute;
-    top: 30%;
-    left: 36.67%;
-    height: 40%;
-    width: 26.67%;
+    top: 60px;
+    left: 110px;
+    height: 80px;
+    width: 80px;
     border-radius: 50%;
     background-color: #fff;
     z-index: 2;
@@ -84,8 +84,8 @@
 }
 
 .bhutan-bottom-triangle {
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 200px;
     clip-path: polygon(100% 0, 100% 100%, 0 100%);
     background-color: #ff4e12;
     z-index: 1;
